# fgcNote

./: .gitignore  fgcNote.drawio  package-lock.json
api_nestjs/: package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
api_nestjs/src/: main.ts
api_nestjs/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
api_nestjs/src/common/: index.ts  session.guard.ts
api_nestjs/src/entities/: user.entity.ts
api_nestjs/src/root/: app.module.ts
api_nestjs/src/user/: user.controller.ts  user.module.ts  user.service.ts
common/: interface.ts
data_factory/: character.csv  download_test.ipynb  fetch_images.ipynb  main.py  process_images.ipynb  pyproject.toml  source.csv  tmp.csv  url.csv
data_factory/services/: download_images.py  image.py  typescript.py
nestjs/: .gitignore  README.md  database.sqlite  package-lock.json  package.json  tsconfig.build.tsbuildinfo  tsconfig.tsbuildinfo
nestjs/src/: main-sync-characters.ts  main.ts
nestjs/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
nestjs/src/canvas/: canvas.controller.ts  canvas.module.ts  (+1 more)
sveltekit/: API_INTEGRATION_README.md  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
sveltekit/src/: app.css  app.html
sveltekit/src/lib/api/: dev.sqlite3  main.py  pyproject.toml
sveltekit/src/lib/api/app/config/: settings.py
sveltekit/src/lib/api/app/db/: database.py  models.py
sveltekit/src/lib/api/app/routers/: auth.py  user.py
sveltekit/src/lib/api/app/services/: fedcmAPI.py
(+114 files in other folders)
