[project]
name = "data-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-lsp>=2.2.6",
    "python-lsp-server[all]>=1.13.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
